# basic-cli

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  build.roc  build.sh  bundle.sh  file-test.roc  file-testBROKEN.roc  flake.nix  glue.roc  glue.sh  jump-start.sh  rust-toolchain.toml  test-cmd-method-chaining.roc  test-cmd-syntax.roc  test-full-static-dispatch.roc  test-static-dispatch.roc
.cargo/: config.toml
.github/workflows/: ci.yml  ci_nix.yml  deploy-docs.yml  generate-docs.yaml  generate-docs.yml  link-check.yml  link_check.yml  release-test.yml  release.yml  test_latest_release.yml
ci/: all_tests.sh  build_platform_w_latest_roc.sh  check_all_exposed_funs_tested.roc  check_cargo_versions_match.roc  file-testBROKEN.roc  get_latest_release_examples.sh  get_latest_release_git_files.sh  get_latest_release_url.sh  get_roc_nightly_url.sh  link_check.sh  test_latest_release.sh
ci/expect_scripts/: args.exp  bytes-stdin-stdout.exp  cmd-test.exp  command-line-args.exp  command.exp  countdown.exp  dir.exp  dup-bytes.exp  echo.exp  env-var.exp  env.exp  error-handling.exp  file-accessed-modified-created-time.exp  file-mixed.exp  file-mixedBROKEN.exp  file-permissions.exp  file-read-buffered.exp  file-read-memory-map.exp  file-read-write.exp  file-read.exp  file-size.exp  file-test.exp  file.exp  form.exp  hello-world.exp  helloWorld.exp  http-get-json.exp  http-get.exp  http.exp  locale.exp  path-test.exp  path.exp  piping.exp  print.exp  random.exp  record-builder.exp  record-builer.exp  result.exp  shared-code.exp  sqlite-basic.exp  (+15 more)
ci/expected_outputs/: env_correct_out.txt
ci/rust_http_server/: Cargo.toml
ci/rust_http_server/src/: main.rs
crates/: README.md
crates/host/: Cargo.toml  build.rs
crates/host/src/: lib.rs  main.rs
crates/roc_app/src/: aarch64.rs  lib.rs  wasm32.rs  x86_64.rs
crates/roc_command/: Cargo.toml
crates/roc_command/src/: lib.rs
crates/roc_env/: Cargo.toml
crates/roc_env/src/: arg.rs  lib.rs
crates/roc_file/: Cargo.toml
crates/roc_file/src/: lib.rs
crates/roc_host/: Cargo.toml  build.rs
crates/roc_host/src/: glue.rs  heap.rs  lib.rs  main.rs  path.rs
crates/roc_host_bin/: Cargo.toml  build.rs
crates/roc_host_bin/src/: main.rs
crates/roc_host_lib/: Cargo.toml
crates/roc_host_lib/src/: lib.rs
crates/roc_http/: Cargo.toml
crates/roc_http/src/: lib.rs
crates/roc_io_error/: Cargo.toml
crates/roc_io_error/src/: lib.rs
crates/roc_random/: Cargo.toml
crates/roc_random/src/: lib.rs
crates/roc_sqlite/: Cargo.toml
crates/roc_sqlite/src/: lib.rs
crates/roc_std/: Cargo.toml
crates/roc_stdio/: Cargo.toml
crates/roc_stdio/src/: lib.rs
crates/roc_tcp/: Cargo.toml
crates/roc_tcp/src/: lib.rs
docs/: encode.md  index.html
docs/0.17.0/: index.html  llms.txt
docs/0.17.0/Arg/: index.html
docs/0.17.0/Cmd/: index.html
docs/0.17.0/Dir/: index.html
docs/0.17.0/Env/: index.html
docs/0.17.0/File/: index.html
docs/0.17.0/FileMetadata/: index.html
docs/0.17.0/Http/: index.html
docs/0.17.0/Path/: index.html
docs/0.17.0/Sleep/: index.html
docs/0.17.0/Stderr/: index.html
docs/0.17.0/Stdin/: index.html
docs/0.17.0/Stdout/: index.html
docs/0.17.0/Tcp/: index.html
docs/0.17.0/Tty/: index.html
docs/0.17.0/Url/: index.html
docs/0.17.0/Utc/: index.html
docs/0.18.0/: index.html  llms.txt
docs/0.18.0/Arg/: index.html
docs/0.18.0/Cmd/: index.html
docs/0.18.0/Dir/: index.html
docs/0.18.0/Env/: index.html
docs/0.18.0/File/: index.html
docs/0.18.0/FileMetadata/: index.html
docs/0.18.0/Http/: index.html
docs/0.19.0/: index.html  llms.txt
examples/: .gitignore  README.md  args.roc  argsBROKEN.roc  bfg.roc  bytes-stdin-stdout.roc  command-line-args.roc  command.roc  countdown.roc  dir.roc  dup-bytes.roc  echo.roc  encode.roc  env-var.roc  env.roc  error-handling.roc  file-accessed-modified-created-time.roc  file-mixed.roc  file-mixedBROKEN.roc  file-permissions.roc  file-read-buffered.roc  file-read-memory-map.roc  file-read-mmap.roc  file-read-write.roc  file-read.roc  file-size.roc  fileBROKEN.roc  form.roc  hello-world.roc  hello.roc  helloWorld.roc  http-get-json.roc  http-get.roc  http.roc  locale.roc  path.roc  piping.roc  print.roc  random-seed.roc  random.roc  (+20 more)
examples/ffi/: .gitignore  compile-ffi-libs.sh  roc_helpers.h  simple.cpp  simple.roc  sqlite-shim.cpp  sqlite.roc  todos.db
platform/: Arg.roc  Cargo.toml  Cmd.roc  CmdInternal.roc  Dir.roc  Effect.roc  Env.roc  EnvDecoding.roc  Ffi.roc  File.roc  FileMetadata.roc  Host.roc  Http.roc  IOErr.roc  InternalArg.roc  InternalCmd.roc  InternalCommand.roc  InternalDateTime.roc  InternalDir.roc  InternalFile.roc  InternalHttp.roc  InternalIOErr.roc  InternalPath.roc  InternalSqlite.roc  InternalTask.roc  InternalTcp.roc  InternalUdp.roc  Locale.roc  Path.roc  PlatformTask.roc  PlatformTasks.roc  Random.roc  Sleep.roc  Sqlite.roc  Stderr.roc  Stdin.roc  Stdout.roc  Task.roc  Tcp.roc  Tty.roc  (+13 more)
platform/Arg/: Base.roc  Builder.roc  Cli.roc  ErrorFormatter.roc  Extract.roc  Help.roc  Opt.roc  Param.roc  Parser.roc  SubCmd.roc  Subcommand.roc  Utils.roc  Validate.roc
platform/glue/roc_app/src/: x86.rs
platform/src/: command_glue.rs  dir_glue.rs  glue.rs  lib.rs  main.rs  path_glue.rs
platform/src/http_glue/: aarch64.rs  wasm32.rs  x86.rs  x86_64.rs
platform/src/main_glue/roc_app/src/: aarch64.rs  arm.rs  lib.rs  x86.rs
src/: Arg.roc  Cargo.toml  Cmd.roc  Command.roc  Dir.roc  Effect.roc  Env.roc  File.roc  FileMetadata.roc  Http.roc  InternalCommand.roc  InternalFile.roc  InternalTcp.roc  Op.roc  Path.roc  Process.roc  README.md  Sleep.roc  Socket.roc  Stderr.roc  Stdin.roc  Stdout.roc  Task.roc  Tcp.roc  Time.roc  Tty.roc  Url.roc  Utc.roc  host.c  lib.rs  main-glue.roc  main.roc  rust-toolchain.toml
src/src/: command_glue.rs  lib.rs  tcp_glue.rs
src/src/glue/roc_app/src/: aarch64.rs  lib.rs
src/src/roc_app/src/: arm.rs  x86.rs  x86_64.rs
tests/: .gitignore  README.md  cmd-test.roc  env.roc  file.roc  path-test.roc  path.roc  tcp.roc  test.db  url.roc  utc.roc
(+28 files in other folders)
