[package]
name = "roc_host"
version = "0.0.1"
authors = ["The Roc Contributors"]
edition = "2021"
license = "UPL-1.0"
repository = "https://github.com/roc-lang/basic-cli"

[lib]
name = "host"
crate-type = ["staticlib"]

# Note: we use "=version" for reproducability, cargo may silently use a more recent version if you do not use `=`.
[dependencies]
libc = "=0.2.180" # keep version in sync with libc workspace dep below
crossterm = "=0.29.0"
roc_std_new.workspace = true
roc_io_error.workspace = true
roc_random.workspace = true
roc_command.workspace = true
memoffset = "=0.9.1"

[target.'cfg(not(target_os = "macos"))'.dependencies]
sys-locale.workspace = true

[workspace]
members = [
    "crates/roc_io_error",
    "crates/roc_random",
    "crates/roc_command",
]

[workspace.package]

authors = ["The Roc Contributors"]
edition = "2021"
license = "UPL-1.0"
version = "0.0.1"
repository = "https://github.com/roc-lang/basic-cli"

[workspace.dependencies]
# Core Roc types
# roc-nightly: 2026-04-09
roc_std_new = { git = "https://github.com/roc-lang/roc", rev = "aecf9fdc3b5b51176580746b197fc03ac196e0d5" }

# Internal crates
roc_io_error = { path = "crates/roc_io_error" }
roc_random = { path = "crates/roc_random" }
roc_command = { path = "crates/roc_command" }

# External dependencies
getrandom = "=0.2.16"
sys-locale = "=0.3.2"
libc = "=0.2.180"

[profile.release]
lto = true
strip = "debuginfo"
panic = "abort"
# Setting this to 1 should improve execution speed by making things easier to optimize for LLVM.
codegen-units = 1
