[package]
name = "host"
version = "0.0.1"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
edition = "2021"

links = "app"

[lib]
name = "host"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
roc_app = { path = "src/roc_app" }
roc_std = { path = "src/roc_std", features = ["std"] }
libc = "0.2"
backtrace = "0.3"
reqwest = { version="=0.11.20", default-features=false, features=["blocking", "rustls-tls"] }
crossterm = "0.26.1"

[workspace]
