[package]
name = "host"
version = "0.0.1"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
edition = "2021"

links = "app"

[lib]
name = "host"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
roc_std = { git = "https://github.com/roc-lang/roc", rev = "7b1f2d2ac1f6e0b7a283cfbe932318f37a0a6861" }
libc = "=0.2.150"
backtrace = "=0.3.69"
reqwest = { version="=0.11.22", default-features=false, features=["blocking", "rustls-tls"] }
crossterm = "=0.27.0"

[workspace]
