[package]
name = "rust_http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "=0.14.27", features = ["full"]}
tokio = { version = "=1.31.0", features = ["full"]}

[workspace]
