[package]
name = "rust_http_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "=1.6.0", default-features = false, features = ["server", "http1"]}
tokio = { version = "=1.45.0", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
hyper-util = { version = "=0.1.12", features = ["tokio"] }
http-body-util = "=0.1.3"
bytes = "=1.10.1"

[workspace]
