[package]
name = "roc_env"
description = "Common functionality for Roc to interface with std::env"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
roc_std.workspace = true
roc_file.workspace = true

[target.'cfg(not(target_os = "macos"))'.dependencies]
sys-locale.workspace = true
