[package]
name = "roc_host"
version = "0.0.1"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
edition = "2021"
description = "This provides the [host](https://github.com/roc-lang/roc/wiki/Roc-concepts-explained#host) implementation for the platform."

links = "app"

[lib]
name = "roc_host"
path = "src/lib.rs"

[dependencies]
roc_std.workspace = true
roc_std_heap.workspace = true
roc_command.workspace = true
roc_file.workspace = true
roc_io_error.workspace = true
roc_tcp.workspace = true
libc = "=0.2.155"
backtrace = "=0.3.69"
hyper.workspace = true
hyper-rustls.workspace = true
tokio.workspace = true
crossterm = "=0.27.0"
memmap2 = "=0.9.4"
memchr = "=2.7.4"
sys-locale = "0.3.2"
