[package]
name = "roc_host"
version = "0.0.1"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
edition = "2021"
description = "This provides the [host](https://github.com/roc-lang/roc/wiki/Roc-concepts-explained#host) implementation for the platform."

links = "app"

[lib]
name = "roc_host"
path = "src/lib.rs"

[dependencies]
crossterm.workspace = true
memmap2.workspace = true
memchr.workspace = true
sys-locale.workspace = true
libc.workspace = true
backtrace.workspace = true
roc_std.workspace = true
roc_std_heap.workspace = true
roc_command.workspace = true
roc_file.workspace = true
roc_io_error.workspace = true
roc_http.workspace = true
roc_stdio.workspace = true
roc_env.workspace = true
roc_sqlite.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
tokio.workspace = true
bytes.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true