[package]
name = "roc_host_bin"
version = "0.0.1"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
edition = "2021"
description = "This crate wraps roc_host to build an executable ready for preprocessing for surgical linking"

links = "app"

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
roc_host = { path = "../roc_host" }
