[package]
name = "roc_host_bin"
version = "0.0.1"
authors = ["The Roc Contributors"]
license = "UPL-1.0"
edition = "2021"
description = "This crate wraps roc_host to build an executable. This executable is used by `roc preprocess-host ...`. That command generates an .rh and .rm file, these files are used by the [surgical linker](https://github.com/roc-lang/roc/tree/main/crates/linker#the-roc-surgical-linker)."

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
roc_std.workspace = true
roc_host.workspace = true
roc_env.workspace = true
