[package]
name = "roc_http"
description = "Common functionality for Roc to interface with hyper"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
roc_std.workspace = true
roc_std_heap.workspace = true
roc_io_error.workspace = true
roc_file.workspace = true
memchr.workspace = true
hyper.workspace = true
hyper-rustls.workspace = true
tokio.workspace = true
bytes.workspace = true
rustls = "0.23.23"
webpki-roots = "0.26.8"
