[package]
name = "roc_random"
description = "Common functionality for Roc to interface with getrandom"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
roc_std.workspace = true
roc_io_error.workspace = true
getrandom.workspace = true
