[package]
name = "roc_sqlite"
description = "Common functionality for Roc to interface with sqlite"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
roc_std.workspace = true
roc_std_heap.workspace = true
libsqlite3-sys.workspace = true
thread_local.workspace = true
